chore: Setup up linter with nuxt eslint

--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/eslint": "^0.5.3",
     "nuxt": "^3.13.0",
     "vue": "latest"
   }
