--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
-    "format": "npx prettier . --write",
     "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "format": "npx prettier . --write",
+    "prepare": "husky",
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
     "@nuxt/eslint": "^0.5.3",
@@ -18,6 +20,15 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.9",
     "prettier": "3.3.3"
+  },
+  "lint-staged": {
+    "./**/*.{mjs,js,ts,vue}": [
+      "npm run lint:fix",
+      "npm run format"
+    ],
+    "./**/*.{css,json,md}": "npm run format"
   }
 }
