--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   "dependencies": {
     "@nuxt/eslint": "^0.5.3",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@vee-validate/nuxt": "^4.13.2",
+    "@vee-validate/zod": "^4.13.2",
     "nuxt": "^3.13.0",
-    "vue": "latest"
+    "vee-validate": "^4.13.2",
+    "vue": "latest",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "husky": "^9.1.5",
